# ReversiAI

./: .gitignore  AgentVSAgent.py  GameBoard.py  HumanVSHuman.py  README.md  RandomAgent.py  ReversiEnvironment.py  StartGame.py  agent_vs_agent.py  evaluate_lineage.py  genetic_training.py  human_vs_human.py  imitation_training.py  pyproject.toml  requirements.txt  start_game.py
Agents/: BranchAggregateAgent.py  NaiveAgent.py  RandomAgent.py
agents/: basic_agent.py  branch_aggregate_agent.py  genetic_agent.py  n_depth_search_agent.py  naive_agent.py  neural_network_and_agent_design.md  random_agent.py  residual_tower_policy_agent.py  simple_nn_agent.py
genetic_algorithm/: genetic_algorithm.md  lineage.py  population.py
imitation_learning/: imitation_learning.py
reversi/: game_board.py  gameplay_utils.py  reversi_environment.py
reversi_ai/: cli.py  evaluate_lineage.py  genetic_training.py  imitation_training.py  play_game.py
reversi_ai/agents/: basic_agent.py  branch_aggregate_agent.py  genetic_agent.py  n_depth_search_agent.py  naive_agent.py  neural_network_and_agent_design.md  random_agent.py  residual_tower_policy_agent.py  simple_nn_agent.py
reversi_ai/genetic_algorithm/: genetic_algorithm.md  lineage.py  population.py
reversi_ai/imitation_learning/: imitation_learning.py
reversi_ai/reversi/: game_board.py  gameplay_utils.py  reversi_environment.py
